--- a/mod.conf
+++ b/mod.conf
@@ -1,3 +1,3 @@
 name = bloc4builder
-depends = default , doors , unifieddyes , xpanes
-optional_depends = mesecons , spacengine , scifi_nodes , abriglass
+depends = default , doors , unifieddyes , xpanes , spacengine
+optional_depends = mesecons , currency, wool
